# FinTrac

./: .gitignore
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TESTING.md  TESTING_SCENARIOS.md  TEST_DOCUMENTATION_INDEX.md  TEST_README.md  TEST_SUITE_SUMMARY.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yaml  pyproject.toml  pytest.ini  test_commands.sh
server/app/: main.py
server/app/config/: manager.py
server/app/repository/: base.py  database.py
server/docker/: app.Dockerfile
server/migrations/: env.py
server/migrations/versions/: 0101da866703_added_some_fields_to_transactions.py  268424f902f1_added_auth_session_security_event_user_.py  2c9633186f86_updated_next_occurrence_field.py  2f12b009ee87_account_name_unique.py  2f62ce13c6cd_added_auth_session_security_event_user_.py  3796104b7505_init.py  493a2c6fded4_added_auth_session_security_event_user_.py  4ba04d1a4644_added_role_permission_and_user.py  4dbb21101ddd_fixed_currency3.py  503bc700f4f5_added_is_delected_to_users.py  5c1b30321c90_init.py  5e793b1cba2e_fixed_currency2.py  61f15fb1aec1_updated_streak_last_activate_date.py  62b6530e07a8_added_auth_session_security_event_user_.py  756a0960afe5_fixed_last_login.py  79e083faf2ae_added_status_code_to_auditlog.py  bfebc44d18b3_made_goals_due_date_utc_aware.py  (+7 more)
server/scripts/: docker-entrypoint.sh  start_celery.sh
server/src/: __init__.py  main.py
server/tests/: __init__.py  conftest.py  test_api_integration.py  test_repositories.py  test_security_and_edge_cases.py  test_services.py  test_utils.py
(+97 files in other folders)
