[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.122.0",
    "pydantic-settings>=2.12.0",
    "python-decouple>=3.8",
    "sqlmodel>=0.0.27",
]

[tool.fastapi]
entrypoint = "app.main:app"